# hephaestus

./: .gitignore  Dockerfile  GSOC.md  README.md  hephaestus.py  main.py  pickle_it.py  pylintrc  pyproject.toml  setup.cfg  setup.py
coverage/: README.md  branches.csv  combine.sh  compute_coverage.py  config.sh  groovyc-generator.sh  groovyc-test-suite.sh  java-generator.sh  javac-test-suite.sh  kotlin-generator.sh  kotlinc-test-suite.sh
coverage/playground/: HelloWorld.java  Main.groovy  Makefile  README.md  main.kt
coverage/resutls/: compute_coverage.py  groovy-combination-inf.csv  groovy-combination.csv  groovy-generator-inf.csv  groovy-generator.csv  groovy-mutator-inf.csv  groovy-test.csv  groovy_whitelist  java-combination-inf.csv  java-combination.csv  java-generator-inf.csv  java-generator.csv  java-mutator-inf.csv  java-test.csv  java_whitelist  kotlin-combination-inf.csv  kotlin-combination.csv  kotlin-generator-inf.csv  (+4 more)
deployment/: README.md  init.sh  run.sh  setup.sh
docs/: kotlin_bugs.txt
examples/: final.kt  final_2.kt  initial_ast.py  p1.kt  p2.kt  p3.kt  p4.kt
reported/: bugs.json  fetch_groovy_bugs.py  fetch_java_bugs.py  fetch_kotlin_bugs.py  schema.json  stats.py  supported_features.json
scripts/: pickle_it.py  replay.sh
src/: args.py  graph_utils.py  utils.py
study/: kotlin_search.py  main.py  select_bugs.py  transform_bugs.py
tests/: test_call_analysis.py  test_graph_utils.py  test_ir.py  test_translators.py  test_type_dependency_analysis.py  test_type_utils.py  test_types.py  test_typescript.py  test_use_analysis.py
(+206 files in other folders)
