[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hephaestus"
version = "1.0"
authors = [
    {name = "Thodoris Sotiropoulos", email = "theosotr@windowslive.com"},
    {name = "Stefanos Chaliasos", email = "stefanoschaliassos@gmail.com"},
]
description = "A framework for testing compilers' type checkers"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: GPL v3.0 License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "networkx",
]

[tool.setuptools]
packages = [
  "src",
  "src.analysis",
  "src.compilers",
  "src.generators",
  "src.ir",
  "src.modules",
  "src.transformations",
  "src.translators",
]
py-modules = ["hephaestus"]
include-package-data = true

[tool.setuptools.package-data]
src = ["resources/*"]

[project.scripts]
hephaestus = "hephaestus:main"

[tool.pytest.ini_options]
addopts = "-vv"
testpaths = [
    "tests",
]
